--- a/3rd-page.html
+++ b/3rd-page.html
@@ -122,11 +122,11 @@
                 <li>
                   <h2 style="color: green; font-weight:bolder">POSITIVE</h2>
                 </li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
+                <li style ="font-weight:bolder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
+                <li style ="font-weight:bolder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
+                <li style ="font-weight:bolder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
+                <li style ="font-weight:bolder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
+                <li style ="font-weight:bolder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -134,11 +134,11 @@
                 <li>
                   <h2 style="color:red; font-weight:bolder">NEGATIVE</h2>
                 </li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
+                <li style ="font-weight:bolder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
+                <li style ="font-weight:bolder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
+                <li style ="font-weight:bolder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
+                <li style ="font-weight:bolder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
+                <li style ="font-weight:bolder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quia quibusdam, aliquam nobis harum pariatur.</li>
               </ul>
             </div>
           </div>
