--- a/inner-page.html
+++ b/inner-page.html
@@ -84,12 +84,12 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4 style="color: white;">EXPECTED COLLEGES</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="3rd-page.html">NIT TRICHY</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="3rd-page.html">MANIT BHOPAL</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="3rd-page.html">IIT DELHI
+              <li><i class="bx bx-chevron-right"></i> <a  style="font-weight: bold;" href="3rd-page.html">NIT TRICHY</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a  style="font-weight: bold;" href="3rd-page.html">MANIT BHOPAL</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a  style="font-weight: bold;" href="3rd-page.html">IIT DELHI
               </a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="3rd-page.html">IIT BOMBAY</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="3rd-page.html">IIT GUWAHATI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a style="font-weight: bold;" href="3rd-page.html">IIT BOMBAY</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a style="font-weight: bold;" href="3rd-page.html">IIT GUWAHATI</a></li>
             </ul>
           </div>
 
